--- a/config.properties
+++ b/config.properties
@@ -8,7 +8,7 @@ browserstack.username = cG9sbGFrcmFobWFuX0ZTSG9DNg==
 browserstack.password = MmhiNUwyOHdrTTJ6Q2VBeFlmeXk=
 
 #take screenshot for failed test cases, false by default
-take.screenshot = "true"
+take.screenshot = "false"
 
 #maximize browser, true by default
 maximize.browser = "true"
